Fix Ui alignment issue in wallet dashboard and choose deamon down arrow slow issues in node settings.

--- a/stylesheets/_bchat.scss
+++ b/stylesheets/_bchat.scss
@@ -1509,7 +1509,8 @@ label {
         justify-content: space-between;
         align-items: center;
         border-radius: 10px;
-        margin-top: 20px;
+        // margin-top: 20px;
+        margin-top: 5px;
         padding: 0 20px;
 
         &--Text {
